# pesto

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  bench_par2.sh  bench_pesto_vs_parpar.sh  config.example.toml
.github/workflows/: ci.yml  release.yml
benches/: par2_encoder.rs  yenc.rs
crates/parmesan/: Cargo.toml
crates/parmesan/src/: encoder.rs  lib.rs  main.rs
crates/pesto/: Cargo.toml  README.md
crates/pesto-par2/: Cargo.toml
crates/pesto-par2/src/: encoder.rs  lib.rs  ops.rs
crates/pesto/examples/hooks/: generic-indexer.bat  generic-indexer.ps1  generic-indexer.sh  other-indexer.sh
crates/pesto/src/: compress.rs  history.rs  hooks.rs  lib.rs  logging.rs  nfo.rs  nzb.rs  upload.rs
crates/pesto/src/config/: parse.rs  types.rs
crates/pesto/src/poster/: mod.rs
crates/pesto/src/ui/: terminal.rs  wizard.rs
crates/pesto/tests/: integration.rs  obfuscated_directory.rs  par2_directory.rs
crates/upapasta/: Cargo.toml  ROADMAP.md
crates/upapasta/src/: app.rs  events.rs  main.rs
crates/upapasta/src/catalog/: mod.rs
crates/upapasta/src/ui/: mod.rs
examples/hooks/: curupira.sh  other-indexer.sh
src/: article.rs  compress.rs  config.rs  lib.rs  logging.rs  main.rs  nfo.rs  notify.rs  nzb.rs  poster.rs  progress.rs  walk.rs  yenc.rs
src/config/: types.rs
src/nntp/: mod.rs  pool.rs
src/par2/: encoder.rs  gf16.rs  mod.rs  shuffle2x.rs
src/poster/: mod.rs
src/yenc/: x86.rs
tests/: integration.rs  obfuscated_directory.rs  par2_cmdline.rs  par2_directory.rs
(+2 files in other folders)
